# asda-test

./: .gitignore  CMakeLists.txt  Delta ASDA2-E rev4.00.xml  Delta_ASDA2-E_rev4-00_XML_TSE_20160620.xml
include/ethercat/: common.h  master.h  pdo.h  registry_idx.h  rxpdo.h  time.h  txpdo.h
src/: idle.cpp  info.cpp  main.cpp  run.cpp
